--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -199,6 +199,11 @@
         padding-right: 5%;
         padding-left: 5%;
     }
+
+    .col-lg-4 {
+        flex: 0 0 auto;
+        width: 50%;
+    }
 }
 
 /* ---- */
@@ -262,6 +267,11 @@
     .pw-portfolio-area .container-fluid {
         padding-right: 5%;
         padding-left: 5%;
+    }
+
+    .col-md-4 {
+        flex: 0 0 auto;
+        width: 50%;
     }
 }
 
@@ -411,6 +421,11 @@
     .pw-projects-menu .portfolio-menu .btn {
         font-size: 15px;
         margin: 7px 5px;
+    }
+
+    .col-sm-4 {
+        flex: 0 0 auto;
+        width: 100%;
     }
 }
 
